More like susie
Remove ROWS, allow new lines to appear
Fixed a bit of styling (but only a bit)

--- a/public/global.css
+++ b/public/global.css
@@ -40,6 +40,9 @@
 	--evaluated-key-color: var(--fg-primary);
 	--key-bg: var(--fg-secondary);
     --tile-font: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+    
+    --header-height: 51px;
+    --keyboard-height: 180px;
 }
 html {
     height: 100%;
