--- a/public/global.css
+++ b/public/global.css
@@ -29,11 +29,11 @@
 	
 
     --color-zero: var(--border-primary);
-	--color-one: #ff0000;
-	--color-two: #ffa500;
-	--color-three: #b59f3b;
-    --color-four: #538d4e;
-    --color-five: #000000;
+	--color-one: #668cff;
+	--color-two: #6666ff;
+	--color-three: #9966ff;
+    --color-four: #cc33ff;
+    --color-five: #ff6666;
     --color-present: #b59f3b;
 	--color-correct: #538d4e;
 	--color-absent: var(--border-primary);
@@ -83,8 +83,11 @@ h3 {
 	margin-bottom: 10px;
 }
 .absent,
-.present,
-.correct {
+.one,
+.two,
+.three,
+.four, 
+.five {
 	color: var(--evaluated-key-color);
 }
 a:link,
