--- a/public/global.css
+++ b/public/global.css
@@ -99,6 +99,7 @@ h3 {
 .five {
 	color: var(--evaluated-key-color);
 }
+.absent,
 .zero {
 	background: var(--color-zero);
 }
@@ -114,6 +115,7 @@ h3 {
 .four {
 	background: var(--color-four);
 }
+.present,
 .five {
     background: var(--color-five);
 } 
