--- a/public/global.css
+++ b/public/global.css
@@ -48,6 +48,7 @@
 	--key-bg: var(--fg-secondary);
     --header-height: 61px;
     --keyboard-height: 180px;
+    --ad-height: 61px;
 }
 html {
     height: 100%;
@@ -59,6 +60,11 @@ body {
     margin: 0;
     padding: 0;
     overflow-y: hidden;
+}
+
+.adwrapper {
+    height: var(--ad-height);
+    width: 100%;
 }
 
 .light {
