--- a/public/global.css
+++ b/public/global.css
@@ -62,9 +62,82 @@ body {
     overflow-y: hidden;
 }
 
-.adwrapper {
+.headeradwrapper {
     height: var(--ad-height);
     width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.leftadwrapper {
+    float: left;
+}
+.rightadwrapper {
+    float: right;
+}
+.rightadwrapper, .leftadwrapper {
+    min-width: 250px;
+    max-width: 350px;
+    height: 100%;
+    width: calc(50% - 250px);
+    margin: 60px 0px;
+}
+
+.sidead {
+    display: block;
+    min-width: 250px;
+    max-width: 350px;
+    height: 600px;
+}
+.headerad {
+    display: block;
+    max-height: var(--ad-height);
+    min-width: 200px;
+    max-width: 500px;
+}
+@media (min-width:320px) {
+    .headerad {
+        width: 320px;
+        height: 50px;
+    }
+}
+@media (min-width:360px) {
+    .headerad {
+        width: 360px;
+        height: 50px;
+    }
+}
+@media (min-width:390px) {
+    .headerad {
+        width: 390px;
+        height: 60px;
+    }
+}
+@media (min-width:414px) {
+    .headerad {
+        width: 414px;
+        height: 60px;
+    }
+}
+@media (min-width:500px) {
+    .headerad {
+        width: 500px;
+        height: 60px;
+    }
+}
+
+@media (max-width:999px) {
+    .rightadwrapper, .leftadwrapper, .sidead {
+        display: none;
+    }
+}
+
+@media (min-width:1000px) {
+    :root {
+        --ad-height: 0px;
+    }
+    .headeradwrapper, .headerad {
+        display: none;
+    }
 }
 
 .light {
